// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-chip-add default 1`] = `
<m-chip-add>
  Chip add
</m-chip-add>
`;

exports[`Storyshots modul-components|m-chip-add disabled 1`] = `
<m-chip-add
  disabled="true"
>
  Disabled
</m-chip-add>
`;

exports[`Storyshots modul-components|m-chip-add icon=false 1`] = `
<m-chip-add>
  Chip
</m-chip-add>
`;

exports[`Storyshots modul-components|m-chip-add small 1`] = `
<m-chip-add
  size="small"
>
  Chip add
</m-chip-add>
`;
